Fixed dragged-over state for dark mode

--- a/src/components/file_upload/css/component.scss
+++ b/src/components/file_upload/css/component.scss
@@ -146,7 +146,7 @@
 
         .qld__form-file-wrapper--dark & {
             background-color: $QLD-color-dark__background;
-            color: $QLD-color-neutral--light__opacity-10;
+            color: $QLD-color-dark__link;
         }
     }
 
@@ -210,7 +210,7 @@
                 &:focus,
                 &:active {
                     background-color: transparent !important;
-                    border-color: $QLD-color-neutral--light__opacity-10;
+                    border-color: $QLD-color-neutral--lightest;
                     text-decoration-color: $QLD-color-dark__heading;
                 }
             }
@@ -241,7 +241,7 @@
             p.qld__file-input-title,
             .qld__file-input-constraints,
             .qld__file-input-label {
-                color: $QLD-color-dark__link--on-action !important;
+                color: $QLD-color-dark__link !important;
             }
 
             .qld__file-input-label {
